--- a/sources/website/index.html
+++ b/sources/website/index.html
@@ -31,11 +31,11 @@
         <template id="headerTemplate">
             <p data-text="h4">
                 <a
-                    href="https://github.com/jacobxperez/atkinson-hyperlegible-pro/archive/refs/heads/release.zip"
+                    href="https://github.com/ez-me/atkinson-hyperlegible-pro/releases/latest/download/AtkinsonHyperlegiblePro.TTF.zip"
                     >Download Font</a
                 >
                 &nbsp;
-                <a href="https://github.com/jacobxperez/atkinson-hyperlegible-pro">Contribute</a>
+                <a href="https://github.com/ez-me/atkinson-hyperlegible-pro">Contribute</a>
             </p>
         </template>
 
