--- a/sources/website/kerning/index.html
+++ b/sources/website/kerning/index.html
@@ -11,7 +11,7 @@
         <meta name="author" content="Jacob Perez" />
         <meta
             property="og:image"
-            content="https://raw.githubusercontent.com/jacobxperez/atkinson-hyperlegible-pro/main/docs/banner.jpg"
+            content="https://raw.githubusercontent.com/ez-me/atkinson-hyperlegible-pro/main/docs/banner.jpg"
         />
         <title>Atkinson Hyperlegible Pro - Improvised Text for Checking Kerning</title>
         <link rel="preload" href="../templates/a.html" as="fetch" type="text/html" crossorigin />
@@ -30,11 +30,11 @@
 
             <p data-text="h5">
                 <a
-                    href="https://github.com/jacobxperez/atkinson-hyperlegible-pro/archive/refs/heads/main.zip"
+                    href="https://github.com/ez-me/atkinson-hyperlegible-pro/releases/latest/download/AtkinsonHyperlegiblePro.TTF.zip"
                     >Download Font</a
                 >
                 &nbsp;
-                <a href="https://github.com/jacobxperez/atkinson-hyperlegible-pro">Contribute</a>
+                <a href="https://github.com/ez-me/atkinson-hyperlegible-pro">Contribute</a>
             </p>
         </template>
 
